fix: popstate delay on iOS (due to scrollRestoration=='manual') fix: titlebar flickers on first render

--- a/view/rt-view.css
+++ b/view/rt-view.css
@@ -2,7 +2,7 @@
     font: 14px/22px Arial, Helvetica, sans-serif;
     word-break: break-word;
     word-wrap: break-word;
-    z-index: 501;
+    z-index: 500;
     width: 100%;
     min-height: 100%;
     background-color: #f2f2f2;
@@ -16,7 +16,7 @@
     top: 0;
     left: 0;
     right: 0;
-    z-index: 501;
+    z-index: 510;
     height: 44px;
     line-height: 44px;
     font-size: 18px;
